kubernetes/apps/weather-map/backend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: weather-map-backend
  namespace: weather-map
  labels:
    app: weather-map-backend
spec:
  selector:
    app: weather-map-backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3001
      name: http
  type: ClusterIP
